generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  ADMIN
}

enum PaymentMethod {
  CASH
  PHONE_TRANSFER
}

enum ApplicationStatus {
  NEW
  IN_PROGRESS
  COMPLETED
}

model User {
  id           String              @id @default(cuid())
  login        String              @unique
  passwordHash String
  fullName     String
  phone        String
  email        String
  role         Role                @default(USER)
  createdAt    DateTime            @default(now())
  applications CourseApplication[]
  reviews      Review[]
}

model CourseApplication {
  id            String              @id @default(cuid())
  userId        String
  user          User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseTitle   String
  startDate     DateTime
  paymentMethod PaymentMethod
  status        ApplicationStatus   @default(NEW)
  createdAt     DateTime            @default(now())
  review        Review?

  @@index([userId])
  @@index([status])
}

model Review {
  id            String            @id @default(cuid())
  applicationId String            @unique
  application   CourseApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  userId        String
  user          User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  content       String
  createdAt     DateTime          @default(now())

  @@index([userId])
}
